feat(logging): first early sample using streaming logs
